<resources>
    <string name="app_name">NutriFit Tracker</string>
    <string name="title_macros">Macros</string>
    <string name="title_workout">Workout</string>
    <string name="title_diary">Diary</string>
    <string name="workout">New workout?</string>

<!--    activity_import-->
    <string name="select_routine">Select a routine:</string>
    <string name="import_exercises">Import</string>

<!--    activity_question-->
    <string name="no_exercises">No exercises exist for this workout.</string>
    <string name="add_exercise">Add Exercise</string>
    <string name="repetition_label">R</string>
    <string name="set_completed">Set Completed</string>
    <string name="weight_label">W</string>

<!--    activity_question_edit-->
    <string name="exercise_name">Exercise Name</string>
    <string name="exercise_hint">Enter the name for the exercise</string>
    <string name="repetition_name">Repetition</string>
    <string name="repetition_hint">Enter the number of repetitions</string>
    <string name="weight_name">Weight</string>
    <string name="weight_hint">Enter the number of pounds per rep</string>
    <string name="save_exercise">Save Exercise</string>

<!--    activity_subject-->
    <string name="add_workout">Add Workout</string>

<!--    context_menu-->
    <string name="delete">Delete</string>

<!--    question_menu-->
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>

<!--    subject_menu-->
    <string name="settings">Settings</string>


    <string name="show_answer">Show Answer</string>
    <string name="update">Update</string>
    <string name="question_deleted">Exercise deleted.</string>
    <string name="question_added">Exercise added.</string>
    <string name="question_updated">Exercise updated.</string>
    <string name="create">Create</string>
    <string name="subject">New workout?</string>
    <string name="cancel">Cancel</string>
    <string name="edit_question">Edit Question</string>
    <string name="subject_exists">The subject "%1$s" already exists.</string>
    <string name="question_number">%1$s (%2$d of %3$d)</string>


    <string name="undo">Undo</string>

    <string name="pref_title_theme">Dark theme</string>
    <string name="pref_description_theme">Turn on dark theme</string>
    <string name="pref_title_default_question">Default question</string>
    <string name="pref_title_subject_order">Subject order</string>
    <string name="pref_none">None</string>

    <string-array name="pref_subject_order">
        <item>Alphabetic</item>
        <item>Newest first</item>
        <item>Oldest first</item>
    </string-array>

    <string-array name="pref_subject_order_values">
        <item>alpha</item>
        <item>new_first</item>
        <item>old_first</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>