<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_macros">

    <fragment
        android:id="@id/navigation_macros"
        android:name="com.zybooks.nutrifittracker.ui.macros.MacrosFragment"
        android:label="@string/title_macros"
        tools:layout="@layout/fragment_macros" />

    <fragment
        android:id="@id/navigation_workout"
        android:name="com.zybooks.nutrifittracker.ui.workout.WorkoutFragment"
        android:label="@string/title_workout"
        tools:layout="@layout/fragment_workout" />

    <fragment
        android:id="@id/navigation_notifications"
        android:name="com.zybooks.nutrifittracker.ui.notifications.NotificationsFragment"
        android:label="@string/title_diary"
        tools:layout="@layout/fragment_notifications" />
</navigation>