<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout android:id="@+id/coordinator_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/no_question_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        tools:context="com.zybooks.nutrifittracker.ExerciseActivity">

        <TextView
            android:id="@+id/no_question_label_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_exercises"
            android:textSize="20sp" />

        <Button
            android:id="@+id/add_question_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_exercise"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/show_question_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        tools:context="com.zybooks.studyhelper.QuestionActivity">

        <TextView
            android:id="@+id/exercise_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exercise_name"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10mm">

            <TextView
                android:id="@+id/repetition_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/repetition_name"
                android:textSize="30sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=" X "
                android:textSize="30sp" />

            <TextView
                android:id="@+id/weight_text_view"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:text="Weight"
                android:textSize="30sp" />

        </LinearLayout>

        <Button
            android:id="@+id/answer_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/set_completed" />

        <View
            android:id="@+id/blue_line"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:background="@android:color/holo_blue_light"
            app:layout_constraintTop_toBottomOf="@id/add_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp" />

        <!-- RecyclerView to display list of meals -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_exercises"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/blue_line"
            app:layout_constraintBottom_toTopOf="@id/bottom_nav_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
